--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,13 +1,35 @@
-<nav class="uk-navbar-container" uk-navbar>
-    <div class="uk-navbar-left">
-        <ul class="uk-navbar-nav">
-        	{% for item in site.data.navigation %}
-        		{% if page.url == item.link %}
-            		<li class="uk-active"><a href="{{ item.link }}">{{ item.name }}</a></li>
-            	{% else %}
-            		<li class="uk-parent"><a href="{{ item.link }}">{{ item.name }}</a></li>
-            	{% endif %}
-            {% endfor %}
-        </ul>
+<nav class="bg-gray-800">
+    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+        <div class="relative flex items-center justify-between h-16">
+            <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+                <div class="flex-shrink-0 flex items-center">
+                    <a href="/"><h1 class="subpixel-antialiased text-white text-sm font-semibold"> James Wilson </h1></a>
+                </div>
+                <div class="hidden sm:block sm:ml-6">
+                    <div class="flex space-x-4">
+                        {% for item in site.data.navigation %}
+                            {% if page.url == item.link %}
+                                <a href="{{ item.link }}" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">{{ item.name }}</a>
+                            {% else %}
+                                <a href="{{ item.link }}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">{{ item.name }}</a>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sm:hidden" id="mobile-menu">
+        <div class="px-2 pt-2 pb-3 space-y-1">
+            {% for item in site.data.navigation %}
+                {% if page.url == item.link %}
+                    <a href="{{ item.link }}" class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium" aria-current="page">{{ item.name }}</a>
+                {% else %}
+                    <a href="{{ item.link }}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">{{ item.name }}</a>
+                {% endif %}
+            {% endfor %}                    
+
+        </div>
     </div>
 </nav>
