--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,58 @@
 layout: default
 ---
 
-<article class="uk-article">
-	<h1 class="uk-article-title">{{ page.title }}</h1>
-	<h1 class="uk-heading-divider"></h1>
-	<p class="uk-article-meta">{{ page.date | date_to_string }} - {{ page.author }}</p>
-	<p>{{ content }}</p>
+<article class="l:divide-y xl:divide-gray-200">
+	<header class="pt-6 xl:pb-10">
+		<div class="space-y-1 text-center">
+			<dl class="space-y-10"><div>
+				<dt class="sr-only">Published on</dt>
+				<dd class="text-base leading-6 font-medium text-gray-500">
+					<time datetime>{{ page.date | date_to_string }}</time>
+				</dd>
+			</div>
+		</dl>
+			<div>
+				<h1 class="text-3xl leading-9 font-extrabold text-gray-900 tracking-tight sm:text-4xl sm:leading-10 md:text-5xl md:leading-14">{{ page.title }}</h1>
+			</div>
+		</div>
+	</header>
+<div class="divide-y xl:divide-y-0  xl:grid xl:grid-cols-4 xl:col-gap-6 pb-16 xl:pb-20" style="grid-template-rows: auto 1fr;">
+	<dl class="pt-1 pb-1 xl:pt-1">
+		<dt class="sr-only">Authors</dt>
+		<dd>
+			<ul class="flex justify-center xl:block space-x-8 sm:space-x-12 xl:space-x-0 xl:space-y-8">
+				<li class="flex items-center space-x-2"><img src="/assets/images/profile.jpg" alt="" class="w-10 h-10 rounded-full">
+					<dl class="text-sm font-medium leading-5 whitespace-no-wrap">
+						<dt class="sr-only">Name</dt>
+						<dd class="text-gray-900">{{ page.author }}</dd>
+						<dt class="sr-only">Twitter</dt>
+						<dd>
+							<a href="https://twitter.com/{{site.twitter_username}}" class="text-teal-500 hover:text-teal-600">@{{site.twitter_username}}</a>
+						</dd>
+					</dl>
+				</li>
+			</ul>
+		</dd>
+	</dl>
+	<div class="divide-y xl:pb-5 xl:col-span-3 xl:row-span-2">
+		<div class="prose max-w-2 pt-10 pb-8">
+			{{ content }}
+		</div>
+	</div>
+	<footer class="text-sm font-medium leading-5  xl:col-start-1 xl:row-start-2">
+		<div class="space-y-8 py-8">
+			<div>
+				<h2 class="text-xs tracking-wide uppercase text-gray-500">{{ content | reading_time_as_i }} to read</h2>
+			</div>			
+			<div>
+				<h2 class="text-xs tracking-wide uppercase text-gray-500">Previous Article</h2>
+				<div class="text-teal-500 hover:text-teal-600">
+					<a href="{{page.previous.url}}">{{page.previous.title}}</a>
+				</div>
+			</div>
+		</div>
+		<div class="pt-8"><a class="text-teal-500 hover:text-teal-600" href="/">← Back to the blog</a></div>
+	</footer>
+</div>
 </article>
+
