--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   <title>{{ page.title }}</title>
+</head>
 </head>
 <body>
     {% include navigation.html %}
