--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,26 @@
-.current {
-  color: green;
+h1 {
+	font-size: 50px;
+}
+h2 {
+	font-size: 30px;
+}
+h3{
+	font-size: 25px;
+}
+h4 {
+	font-size: 15px;
+}
+h5 {
+	font-size: 10px;
+}
+p {
+	padding: 5px 0px 5px 0px;
+}
+.tooltip{
+  visibility: hidden;
+  position: absolute;
+}
+.has-tooltip:hover .tooltip {
+  visibility: visible;
+  z-index: 100;
 }
