--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ layout: default-no-header
 		</dd>
 	</dl>
 	<div class="divide-y xl:pb-5 xl:col-span-3 xl:row-span-2">
-		<div class="prose max-w-2 pt-10 pb-8">
+		<div class="antialiased prose max-w-2 pt-10 pb-8">
 			{{ content }}
 		</div>
 	</div>
